Two spaced-out breaks

--- a/_includes/incubator/schedule.html
+++ b/_includes/incubator/schedule.html
@@ -18,25 +18,28 @@
         <td>13:45</td><td>Exploring remote resources</td>
       </tr>
       <tr>
-        <td>14:15</td><td>Afternoon break</td>
+        <td>14:15</td><td><em>break</em></td>
       </tr>
       <tr>
-        <td>14:45</td><td>Scheduler fundamentals</td>
+        <td>14:30</td><td>Scheduler fundamentals</td>
       </tr>
       <tr>
-        <td>15:15</td><td>Environment variables</td>
+        <td>15:00</td><td>Environment variables</td>
       </tr>
       <tr>
         <td>15:30</td><td>Transferring files with remote computers</td>
       </tr>
       <tr>
-        <td>15:45</td><td>Running a parallel job</td>
+        <td>15:45</td><td><em>break</em></td>
       </tr>
       <tr>
-        <td>16:15</td><td>Using resources effectively</td>
+        <td>16:00</td><td>Running a parallel job</td>
       </tr>
       <tr>
-        <td>16:45</td><td>Using shared resources responsibly</td>
+        <td>16:30</td><td>Using resources effectively</td>
+      </tr>
+      <tr>
+        <td>16:50</td><td>Using shared resources responsibly</td>
       </tr>
       <tr>
         <td>17:00</td><td>END</td>
