--- a/_includes/incubator/schedule.html
+++ b/_includes/incubator/schedule.html
@@ -44,6 +44,11 @@
       <tr>
         <td>17:00</td><td>END</td>
       </tr>
+      <tr> <td><em>After</em></td>
+        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}"
+               target="_blank" rel="noopener noreferrer">
+            Post-workshop survey</a>
+        </td>
     </table>
   </div>
 </div>
