--- a/_includes/incubator/schedule.html
+++ b/_includes/incubator/schedule.html
@@ -2,53 +2,26 @@
   <div class="col-md-6">
     <h3>HPC Intro</h3>
     <table class="table table-striped">
-      <tr> <td><em>Before</em></td>
-        <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}"
-               target="_blank" rel="noopener noreferrer">
-            Pre-workshop survey</a>
-        </td>
-      </tr>
-      <tr>
-        <td>13:00</td><td>Why use a cluster?</td>
-      </tr>
-      <tr>
-        <td>13:15</td><td>Connecting to a remote HPC system</td>
-      </tr>
-      <tr>
-        <td>13:45</td><td>Exploring remote resources</td>
-      </tr>
-      <tr>
-        <td>14:15</td><td><em>break</em></td>
-      </tr>
-      <tr>
-        <td>14:30</td><td>Scheduler fundamentals</td>
-      </tr>
-      <tr>
-        <td>15:00</td><td>Environment variables</td>
-      </tr>
-      <tr>
-        <td>15:30</td><td>Transferring files with remote computers</td>
-      </tr>
-      <tr>
-        <td>15:45</td><td><em>break</em></td>
-      </tr>
-      <tr>
-        <td>16:00</td><td>Running a parallel job</td>
-      </tr>
-      <tr>
-        <td>16:30</td><td>Using resources effectively</td>
-      </tr>
-      <tr>
-        <td>16:50</td><td>Using shared resources responsibly</td>
-      </tr>
-      <tr>
-        <td>17:00</td><td>END</td>
-      </tr>
-      <tr> <td><em>After</em></td>
-        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}"
-               target="_blank" rel="noopener noreferrer">
-            Post-workshop survey</a>
-        </td>
+      <tr> <td><em>Before</em></td><td>
+          <a href="{{ site.pre_survey }}{{ site.github.project_title }}"
+             target="_blank" rel="noopener noreferrer">
+            Pre-workshop survey</a></td>                                   </tr>
+      <tr> <td>13:00</td><td>Why use a cluster?</td>                       </tr>
+      <tr> <td>13:15</td><td>Connecting to a remote HPC system</td>        </tr>
+      <tr> <td>13:45</td><td>Exploring remote resources</td>               </tr>
+      <tr> <td>14:15</td><td><em>break</em></td>                           </tr>
+      <tr> <td>14:30</td><td>Scheduler fundamentals</td>                   </tr>
+      <tr> <td>15:00</td><td>Environment variables</td>                    </tr>
+      <tr> <td>15:30</td><td>Transferring files with remote computers</td> </tr>
+      <tr> <td>15:45</td><td><em>break</em></td>                           </tr>
+      <tr> <td>16:00</td><td>Running a parallel job</td>                   </tr>
+      <tr> <td>16:30</td><td>Using resources effectively</td>              </tr>
+      <tr> <td>16:50</td><td>Using shared resources responsibly</td>       </tr>
+      <tr> <td>17:00</td><td>END</td>                                      </tr>
+      <tr> <td><em>After</em></td> <td>
+          <a href="{{ site.post_survey }}{{ site.github.project_title }}"
+             target="_blank" rel="noopener noreferrer">
+            Post-workshop survey</a> </td>                                 </tr>
     </table>
   </div>
 </div>
