Drop warning about curriculum, clarify Setup

--- a/_includes/incubator/setup.html
+++ b/_includes/incubator/setup.html
@@ -1,6 +1,9 @@
-{% unless curricula contains site.curriculum %}
-{% include warning-curriculum.html %}
-{% endunless %}
+<p>
+  If you recently participated in a Software Carpentry lesson,
+  such as <em>The Unix Shell</em> or <em>Version Control with Git</em>,
+  you should already have the tools needed for this workshop.
+  Please check the following instructions to make sure.
+</p>
 
 {% include install_instructions/shell.html %}
 {% include install_instructions/editor.html %}
