--- a/_includes/workshop_footer.html
+++ b/_includes/workshop_footer.html
@@ -24,4 +24,5 @@
       </h4>
     </div>
   </div>
+  <script src="https://pages.nist.gov/nist-header-footer/js/nist-header-footer-v-2.0.js" type="text/javascript" defer="defer"></script>
 </footer>
