Try adding Incubator links in schedule

--- a/_includes/incubator/schedule.html
+++ b/_includes/incubator/schedule.html
@@ -3,7 +3,7 @@
     <h3>HPC Intro</h3>
     <table class="table table-striped">
       <tr> <td><em>Before</em></td><td>
-          <a href="{{ site.pre_survey }}{{ site.github.project_title }}"
+          <a href="{{ site.incubator_pre_survey }}"
              target="_blank" rel="noopener noreferrer">
             Pre-workshop survey</a></td>                                   </tr>
       <tr> <td>13:00</td><td>Why use a cluster?</td>                       </tr>
@@ -19,7 +19,7 @@
       <tr> <td>16:50</td><td>Using shared resources responsibly</td>       </tr>
       <tr> <td>17:00</td><td>END</td>                                      </tr>
       <tr> <td><em>After</em></td> <td>
-          <a href="{{ site.post_survey }}{{ site.github.project_title }}"
+          <a href="{{ site.incubator_post_survey }}"
              target="_blank" rel="noopener noreferrer">
             Post-workshop survey</a> </td>                                 </tr>
     </table>
