--- a/_includes/incubator/schedule.html
+++ b/_includes/incubator/schedule.html
@@ -1,33 +1,40 @@
 <h3>HPC Intro</h3>
+<a href="https://hpc-workshops.github.io/ctcms-hpc-intro/">hpc-workshops.github.io/ctcms-hpc-intro</a>
 <div class="row">
   <div class="col-md-6">
     <h2><em>Day 1</em></h2>
     <table class="table table-striped">
-      <tr> <td><em>Before</em></td><td>
-          <a href="{{ site.incubator_pre_survey }}"
-             target="_blank" rel="noopener noreferrer">
-            Pre-workshop survey</a></td>                                   </tr>
-      <tr> <td>13:00</td><td>Why use a cluster?</td>                       </tr>
-      <tr> <td>13:30</td><td>Connecting to a remote HPC system</td>        </tr>
-      <tr> <td>14:30</td><td>Exploring remote resources</td>               </tr>
-      <tr> <td>15:15</td><td><em>break</em></td>                           </tr>
-      <tr> <td>15:30</td><td>Scheduler fundamentals</td>                   </tr>
-      <tr> <td>16:30</td><td>Environment variables</td>                    </tr>
-      <tr> <td>16:45</td><td>Transferring files with remote computers</td> </tr>
-      <tr> <td>17:00</td><td>END</td>                                      </tr>
+      <tr> <td><em>Before</em></td>
+        <td> <a href="https://hpc-workshops.github.io/ctcms-hpc-intro/setup.html">Setup</a> and
+             <a href="{{ site.incubator_pre_survey }}" target="_blank" rel="noopener noreferrer"> Pre-workshop survey</a></td> </tr>
+      <tr> <td>13:00</td>
+        <td><a href="https://hpc-workshops.github.io/ctcms-hpc-intro/10-hpc-intro/index.html">Why use a cluster?</a></td> </tr>
+      <tr> <td>13:30</td>
+        <td><a href="https://hpc-workshops.github.io/ctcms-hpc-intro/11-connecting/index.html">Connecting to a remote HPC system</a></td> </tr>
+      <tr> <td>14:30</td>
+        <td><a href="https://hpc-workshops.github.io/ctcms-hpc-intro/12-cluster/index.html">Exploring remote resources</a></td> </tr>
+      <tr> <td>15:15</td> <td><em>break</em></td> </tr>
+      <tr> <td>15:30</td>
+        <td><a href="https://hpc-workshops.github.io/ctcms-hpc-intro/13-scheduler/index.html">Scheduler fundamentals</a></td> </tr>
+      <tr> <td>16:30</td>
+        <td><a href="https://hpc-workshops.github.io/ctcms-hpc-intro/14-environment-variables/index.html">Environment variables</a></td> </tr>
+      <tr> <td>16:45</td>
+        <td><a href="https://hpc-workshops.github.io/ctcms-hpc-intro/16-transferring-files/index.html">Transferring files with remote computers</a></td> </tr>
+      <tr> <td>17:00</td> <td>END</td>                                      </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h2><em>Day 2</em></h2>
     <table class="table table-striped">
-      <tr> <td>14:00</td><td>Running a parallel job</td>                   </tr>
-      <tr> <td>14:40</td><td>Using resources effectively</td>              </tr>
-      <tr> <td>14:50</td><td>Using shared resources responsibly</td>       </tr>
-      <tr> <td>15:00</td><td>END</td>                                      </tr>
-      <tr> <td><em>After</em></td> <td>
-          <a href="{{ site.incubator_post_survey }}"
-             target="_blank" rel="noopener noreferrer">
-            Post-workshop survey</a> </td>                                 </tr>
+      <tr> <td>14:00</td>
+        <td><a href="https://hpc-workshops.github.io/ctcms-hpc-intro/17-parallel/index.html">Running a parallel job</a></td> </tr>
+      <tr> <td>14:40</td>
+        <td><a href="https://hpc-workshops.github.io/ctcms-hpc-intro/18-resources/index.html">Using resources effectively</a></td> </tr>
+      <tr> <td>14:50</td>
+        <td><a href="https://hpc-workshops.github.io/ctcms-hpc-intro/19-responsibility/index.html">Using shared resources responsibly</a></td> </tr>
+      <tr> <td>15:00</td><td>END</td> </tr>
+      <tr> <td><em>After</em></td>
+        <td><a href="{{ site.incubator_post_survey }}" target="_blank" rel="noopener noreferrer">Post-workshop survey</a></td> </tr>
     </table>
   </div>
 </div>
